--- a/src/input.css
+++ b/src/input.css
@@ -4,3 +4,15 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap');
+
+.btn {
+    @apply shadow-md py-3 px-6 rounded-md transition duration-300
+}
+
+.btn-blue {
+    @apply bg-primaryBlue text-white
+}
+
+.btn-darkblue {
+    @apply bg-neutralGrayishBlue text-neutralVeryDarkBlue
+}
