--- a/public/output.css
+++ b/public/output.css
@@ -521,9 +521,15 @@ video {
   padding-left: 1rem;
 }
 
-@media (min-width: 1124px) {
+@media (min-width: 375px) {
   .container {
-    max-width: 1124px;
+    max-width: 375px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
   }
 }
 
@@ -535,12 +541,16 @@ video {
   position: relative;
 }
 
-.top-32 {
-  top: 8rem;
+.top-16 {
+  top: 4rem;
 }
 
 .right-0 {
   right: 0px;
+}
+
+.top-20 {
+  top: 5rem;
 }
 
 .z-10 {
@@ -585,6 +595,10 @@ video {
   margin-bottom: -1px;
 }
 
+.mt-12 {
+  margin-top: 3rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -593,16 +607,16 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
-}
-
 .mb-8 {
   margin-bottom: 2rem;
 }
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .inline-block {
@@ -625,8 +639,8 @@ video {
   height: 83.333333%;
 }
 
-.h-80 {
-  height: 20rem;
+.h-40 {
+  height: 10rem;
 }
 
 .w-5\/6 {
@@ -637,18 +651,12 @@ video {
   width: 50%;
 }
 
-.w-52 {
-  width: 13rem;
+.w-72 {
+  width: 18rem;
 }
 
 .flex-1 {
   flex: 1 1 0%;
-}
-
-.border-spacing-64 {
-  --tw-border-spacing-x: 16rem;
-  --tw-border-spacing-y: 16rem;
-  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
 }
 
 .cursor-pointer {
@@ -677,6 +685,10 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -1007,6 +1019,10 @@ video {
     margin-top: 3rem;
   }
 
+  .sm\:block {
+    display: block;
+  }
+
   .sm\:flex {
     display: flex;
   }
@@ -1022,32 +1038,11 @@ video {
   .sm\:w-3\/4 {
     width: 75%;
   }
-
-  .sm\:flex-row {
-    flex-direction: row;
-  }
 }
 
 @media (min-width: 768px) {
-  .md\:my-8 {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-  }
-
   .md\:mb-16 {
     margin-bottom: 4rem;
-  }
-
-  .md\:mt-60 {
-    margin-top: 15rem;
-  }
-
-  .md\:mt-16 {
-    margin-top: 4rem;
-  }
-
-  .md\:block {
-    display: block;
   }
 
   .md\:h-full {
@@ -1057,41 +1052,9 @@ video {
   .md\:w-full {
     width: 100%;
   }
-
-  .md\:w-5\/12 {
-    width: 41.666667%;
-  }
-
-  .md\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .md\:flex-row {
-    flex-direction: row;
-  }
-
-  .md\:justify-start {
-    justify-content: flex-start;
-  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:-bottom-28 {
-    bottom: -7rem;
-  }
-
-  .lg\:-right-36 {
-    right: -9rem;
-  }
-
-  .lg\:-left-36 {
-    left: -9rem;
-  }
-
-  .lg\:mt-28 {
-    margin-top: 7rem;
-  }
-
   .lg\:mb-0 {
     margin-bottom: 0px;
   }
@@ -1100,35 +1063,98 @@ video {
     margin-top: 4rem;
   }
 
-  .lg\:block {
-    display: block;
-  }
-
-  .lg\:w-5\/12 {
-    width: 41.666667%;
-  }
-
-  .lg\:w-full {
-    width: 100%;
-  }
-
-  .lg\:w-2\/4 {
-    width: 50%;
-  }
-
-  .lg\:flex-row {
-    flex-direction: row;
-  }
-
-  .lg\:items-start {
-    align-items: flex-start;
-  }
-
   .lg\:text-left {
     text-align: left;
   }
+}
 
-  .lg\:text-5xl {
+@media (min-width: 1536px) {
+  .\32xl\:top-32 {
+    top: 8rem;
+  }
+
+  .\32xl\:-bottom-28 {
+    bottom: -7rem;
+  }
+
+  .\32xl\:-right-36 {
+    right: -9rem;
+  }
+
+  .\32xl\:-left-36 {
+    left: -9rem;
+  }
+
+  .\32xl\:my-8 {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .\32xl\:mt-28 {
+    margin-top: 7rem;
+  }
+
+  .\32xl\:mt-60 {
+    margin-top: 15rem;
+  }
+
+  .\32xl\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .\32xl\:mb-16 {
+    margin-bottom: 4rem;
+  }
+
+  .\32xl\:mt-16 {
+    margin-top: 4rem;
+  }
+
+  .\32xl\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .\32xl\:h-80 {
+    height: 20rem;
+  }
+
+  .\32xl\:w-5\/12 {
+    width: 41.666667%;
+  }
+
+  .\32xl\:w-full {
+    width: 100%;
+  }
+
+  .\32xl\:w-8\/12 {
+    width: 66.666667%;
+  }
+
+  .\32xl\:w-2\/4 {
+    width: 50%;
+  }
+
+  .\32xl\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .\32xl\:flex-row {
+    flex-direction: row;
+  }
+
+  .\32xl\:items-start {
+    align-items: flex-start;
+  }
+
+  .\32xl\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .\32xl\:text-left {
+    text-align: left;
+  }
+
+  .\32xl\:text-5xl {
     font-size: 3rem;
     line-height: 1;
   }
